# django-ninja-rbac

./: .editorconfig  LICENSE  README.md  pyproject.toml
src/ninja_rbac/: __init__.py  decorators.py
